--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.43.0"
+    "@aws-sdk/client-s3": "^3.43.0",
+    "csv": "^6.0.4"
   }
 }
