--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "electron-builder install-app-deps "
   },
   "keywords": [],
-  "author": "Jinghui <wjinghui@amazon.com>",
+  "author": "DiscreteTom <discrete_tom@outlook.com>",
   "license": "MIT",
   "homepage": "https://github.com/michalzaq12/electron-nuxt/blob/master/README.md",
   "engines": {
