--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "less-loader": "7.0.1",
     "nuxt": "^2.15.8",
     "roboto-fontface": "^0.10.0",
+    "sass-loader": "^10",
     "vuetify": "^2.5.10",
     "webpack": "^4.46.0",
-    "webpack-node-externals": "^3.0.0",
-    "sass-loader": "^10"
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.43.0",
+    "@aws-sdk/s3-request-presigner": "^3.44.0",
     "csv": "^6.0.4"
   }
 }
