--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           node-version: 12
 
+      - name: Install Yarn
+        run: npm install -g yarn
+
       - name: Build/release Electron app
         uses: michalzaq12/action-electron-nuxt@v1
         with:
@@ -34,3 +37,7 @@ jobs:
           # If the commit is tagged with a version (e.g. "v1.0.0")
           # type: boolean
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+
+      - name: Uninstall Yarn
+        if: always()
+        run: npm uninstall -g yarn
