--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,4 @@ jobs:
           # type: string
           github_token: ${{ secrets.github_token }}
 
-          # If the commit is tagged with a version (e.g. "v1.0.0")
-          # type: boolean
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          release: true
